feat: add new config system and remove moulconfig dependency 🔧