@@ -2,12 +2,12 @@ package dev.morazzer.cookiesmod.config;
 
 import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
-import dev.morazzer.cookiesmod.CookiesMod;
+import com.google.gson.JsonObject;
+import dev.morazzer.cookiesmod.config.system.parsed.ConfigProcessor;
+import dev.morazzer.cookiesmod.config.system.parsed.ConfigReader;
 import dev.morazzer.cookiesmod.utils.ExceptionHandler;
-import io.github.moulberry.moulconfig.processor.BuiltinMoulConfigGuis;
-import io.github.moulberry.moulconfig.processor.ConfigProcessorDriver;
-import io.github.moulberry.moulconfig.processor.MoulConfigProcessor;
 import lombok.Getter;
+import lombok.extern.slf4j.Slf4j;
 
 import java.io.IOException;
 import java.nio.file.Files;
@@ -15,83 +15,71 @@ import java.nio.file.Path;
 import java.nio.file.StandardCopyOption;
 import java.nio.file.StandardOpenOption;
 
+@Slf4j
 public class ConfigManager {
 
-    private static final Gson gson = new GsonBuilder()
-            .setPrettyPrinting()
-            .excludeFieldsWithoutExposeAnnotation()
-            .serializeSpecialFloatingPointValues()
-            .enableComplexMapKeySerialization()
-            .create();
+	@Getter
+	private static final Gson gson = new GsonBuilder()
+			.setPrettyPrinting()
+			.excludeFieldsWithoutExposeAnnotation()
+			.serializeSpecialFloatingPointValues()
+			.enableComplexMapKeySerialization()
+			.create();
 
-    private static CookiesConfig config;
-    @Getter
-    private static MoulConfigProcessor<CookiesConfig> processedConfig;
+	private static CookiesConfig config;
+	@Getter
+	private static ConfigReader configReader;
 
-    public static CookiesConfig getConfig() {
-        if (config == null) {
-            config = loadConfig();
-        }
+	public static CookiesConfig getConfig() {
+		if (config == null) {
+			processConfig();
+		}
 
-        return config;
-    }
+		return config;
+	}
 
-    private static final Path configFolder = Path.of("config/cookiesmod");
-    private static final Path configFile = configFolder.resolve("config.json");
+	private static final Path configFolder = Path.of("config/cookiesmod");
+	private static final Path configFile = configFolder.resolve("config.json");
 
-    public static void saveConfig(boolean createBackup, String reason) {
-        if (!Files.exists(configFolder)) {
+	public static void saveConfig(boolean createBackup, String reason) {
+		if (!Files.exists(configFolder)) {
+			try {
+				Files.createDirectories(configFolder);
+			} catch (IOException e) {
+				ExceptionHandler.handleException(e);
+			}
+		}
 
-            try {
-                Files.createDirectories(configFolder);
-            } catch (IOException e) {
-                ExceptionHandler.handleException(e);
-            }
-        }
+		if (createBackup) {
+			try {
+				Files.copy(configFile, configFile.resolveSibling("config.backup.json"), StandardCopyOption.REPLACE_EXISTING);
+			} catch (IOException e) {
+				ExceptionHandler.handleException(e);
+			}
+		}
 
-        if (createBackup) {
-            try {
-                Files.copy(configFile, configFile.resolve("config.backup.json"), StandardCopyOption.REPLACE_EXISTING);
-            } catch (IOException e) {
-                ExceptionHandler.handleException(e);
-            }
-        }
+		try {
+			Files.writeString(configFile, gson.toJson(config.save()), StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
+		} catch (Exception e) {
+			ExceptionHandler.handleException(e);
+		}
+		log.info("Saving config with with reason: {}", reason);
+	}
 
-        try {
-            Files.write(configFile, gson.toJson(config).getBytes(), StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
-        } catch (Exception e) {
-            ExceptionHandler.handleException(e);
-        }
-    }
+	private static JsonObject loadConfig() {
+		if (Files.exists(configFile)) {
+			return gson.fromJson(ExceptionHandler.removeThrows(() -> Files.readString(configFile), "{}"), JsonObject.class);
+		} else {
+			saveConfig(false, "first-save");
+		}
 
-    private static CookiesConfig loadConfig() {
-        if (!Files.exists(configFile)) {
-            config = new CookiesConfig();
-            saveConfig(false, "first-save");
-            CookiesMod.setFirstStart();
-        }
+		return new JsonObject();
+	}
 
-
-        try {
-            return gson.fromJson(Files.readString(configFile), CookiesConfig.class);
-        } catch (IOException e) {
-            ExceptionHandler.handleException(e);
-            throw new RuntimeException(e);
-        }
-    }
-
-    public static void processConfig() {
-        if (processedConfig != null) {
-            throw new IllegalStateException("Config initialize was called multiple times");
-        }
-        CookiesConfig config = getConfig();
-        System.out.println(config);
-
-        MoulConfigProcessor<CookiesConfig> configProcessor = new MoulConfigProcessor<>(config);
-        BuiltinMoulConfigGuis.addProcessors(configProcessor);
-        ConfigProcessorDriver.processConfig(CookiesConfig.class, config, configProcessor);
-
-        processedConfig = configProcessor;
-    }
+	public static void processConfig() {
+		config = new CookiesConfig().load(loadConfig());
+		configReader = new ConfigReader();
+		ConfigProcessor.processConfig(config, configReader);
+	}
 
 }
